fix: Avoid word-wrap in card-text and remove title from modal

--- a/src/app/invites/shared/countdown/countdown.component.css
+++ b/src/app/invites/shared/countdown/countdown.component.css
@@ -17,6 +17,8 @@
 
 .time .card .card-text {
   font-size: 18px;
+  display: flex;
+  justify-content: center;
 }
 
 .time .card .card-title,
