--- a/src/app/invites/sweet-xv/xv-modern/xv-modern.component.css
+++ b/src/app/invites/sweet-xv/xv-modern/xv-modern.component.css
@@ -80,7 +80,7 @@
 
 .info {
   position: relative;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   overflow-x: clip;
 }
 
